sports objects update
